# BotSquared

./: .gitignore  Dockerfile  README  README.md  bot.py  docker-compose.yml  plugins.yaml  pyproject.toml  requirements.py  requirements.txt
.github/: ghcr-publish.yml
interfaces/: chat_bot.py
plugins/: plugin.py
plugins/teamspeak/: __init__.py  teamspeak.py  teamspeak_default_config.yaml  teamspeak_test.py
plugins/template/: __init__.py  template.py  template_test.py
src/bot_squared/: _version.py  b2.py  config_validator.py  default_config.yaml  integrator.py  requirements.txt
src/bot_squared/interfaces/: chat_plugin.py
src/bot_squared/plugins/: __init__.py  plugin.py  plugin_base.py
src/bot_squared/plugins/discord/: __init__.py  discord.py
src/bot_squared/plugins/steam/: __init__.py  steam.py
src/bot_squared/plugins/teamspeak/: __init__.py  teamspeak.py  teamspeak_default_config.yaml  teamspeak_test.py  test_teamspeak.py
src/bot_squared/plugins/template/: __init__.py  template.py  template_default_config.yaml  template_test.py
test/: bot_squared-0.1.dev5+gbec950f.d20250301-py3-none-any.whl  plugin_test.py
test_env/: docker_compose.yaml
tests/: test_chat_plugin.py  test_config_validator.py  test_integrator.py  test_plugin.py
